--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
         <title>Noal的個人網站-作品集</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/banner.css">
         <script src="https://kit.fontawesome.com/e840f0ebb3.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
         <script type="module" src="./app.js"></script>
@@ -64,6 +65,27 @@
           </span>
         </button>
     </header>
+    
+    <div class="banner">
+      <div class="bannersign">
+        <div class="signblock">
+          <p><span>讓使用者在觀賞與使用的旅程中，發現設計的價值</span></p>
+          <p><span>而我在設計與開發的過程中，看見自己的價值</span></p>
+        </div>
+      </div>
+      <div class="bannercards">
+        <div class="banCard">
+          <p>2B經驗</p>
+          <span>內部監控系統、庫存系統、採購系統、行銷整合系統</span>
+        </div>
+        <div class="banCard">
+          <p>2C經驗</p>
+          <span>跨國美妝保養電商、個人品牌網站、醫美網站、電子商務</span>
+        </div>
+      </div>
+    </div>
+
+
     <div class="filter"></div>
     <!-- other  -->
 </body>
