--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Noal的個人網站-作品集</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/banner.css">
         <script src="https://kit.fontawesome.com/e840f0ebb3.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-        <script type="module" src="./app.js"></script>
+        <script type="module" src="./javascript/app.js"></script>
     </head>
 <body>
     <!-- header-area 表頭部分 -->
     <header>
         <section class="logo">
-            <a href="#"><img src="./logo.svg" alt="Logo圖片"></a>
+            <a href="#"><img src="./img/logo.svg" alt="Logo圖片"></a>
         </section>
         <nav>
             <ul>
