新增表尾區塊

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/banner.css">
+        <link rel="stylesheet" href="/css/foother.css">
         <script src="https://kit.fontawesome.com/e840f0ebb3.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
         <script type="module" src="./javascript/app.js"></script>
@@ -88,5 +89,36 @@
 
     <div class="filter"></div>
     <!-- other  -->
+
+
+    <!-- footer區塊 -->
+    <div class="footer">
+      <div class="qiote">
+        <div class="logo">
+          <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/a0deba953fc5322a513e717e7c24b25fa3d946f8/2024%20web-camp/logo.svg" alt="logo">
+        </div>
+        <div class="guide">
+          <p>若有數位產品設計和開發相關問題</p>
+          <p>歡迎填寫表單，或直接與我聯絡！</p>
+        </div>
+        <span>service@hexschool.com</span>
+      </div>
+      <div class="service">
+        <ul class="content">
+          <li class="list">
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/2f8d8c7a6133b448ecff5bf0a3d282b87b7c6a7e/2024%20web-camp/list.svg" alt="list">
+            <p>填寫表單</p>
+          </li>
+          <li>
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/2f8d8c7a6133b448ecff5bf0a3d282b87b7c6a7e/2024%20web-camp/instagram.svg" alt="instagram">
+            <p>hexschool_demo</p>
+          </li>
+          <li>
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/2f8d8c7a6133b448ecff5bf0a3d282b87b7c6a7e/2024%20web-camp/facebook.svg" alt="facebook">
+            <p>hexschoolTW</p>
+          </li>
+        </ul>
+      </div>
+    </div>
 </body>
 </html>
