--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/banner.css">
+        <link rel="stylesheet" href="./css/article.css">
         <link rel="stylesheet" href="/css/foother.css">
         <script src="https://kit.fontawesome.com/e840f0ebb3.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
@@ -89,7 +90,106 @@
 
     <div class="filter"></div>
     <!-- other  -->
-
+    <div class="container work">
+      <div class="work_menu">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image1.png?raw=true"
+            alt="星際旅行訂票平台"
+            class="work_image"
+          />
+          <div class="work_content">
+            <h2 class="work_name">星際旅行訂票平台</h2>
+            <p class="work_intro fs-6">悠遊宇宙的夢想，從這裡開始實現</p>
+          </div>
+          <ul class="tag_menu">
+            <li class="tag_name fs-6">網頁設計</li>
+            <li class="tag_name fs-6">響應式設計</li>
+            <li class="tag_name fs-6">Bootstrap</li>
+          </ul>
+      </div>
+      <div class="work_menu">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image2.png?raw=true"
+            alt="理財App"
+            class="work_image"
+          />
+          <div class="work_content">
+            <h2 class="work_name">理財App</h2>
+            <p class="work_intro fs-6">
+              連動帳戶與行動支付，讓 AI 提供您最好的理財建議
+            </p>
+          </div>
+          <ul class="tag_menu">
+            <li class="tag_name fs-6">APP設計</li>
+            <li class="tag_name fs-6">iOS</li>
+            <li class="tag_name fs-6">React</li>
+          </ul>
+      </div>
+      <div class="work_menu">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image3.png?raw=true"
+            alt="醫美診所官網"
+            class="work_image"
+          />
+          <div class="work_content">
+            <h2 class="work_name">醫美診所官網</h2>
+            <p class="work_intro fs-6">永保青春的秘密，從粹究開始</p>
+          </div>
+          <ul class="tag_menu">
+            <li class="tag_name fs-6">網頁設計</li>
+            <li class="tag_name fs-6">響應式設計</li>
+            <li class="tag_name fs-6">ＷordPress</li>
+          </ul>
+      </div>
+      <div class="work_menu">
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image4.png?raw=true"
+            alt="美美美早餐店 POS 機 UI Design"
+            class="work_image"
+          />
+          <div class="work_content">
+            <h2 class="work_name">美美美早餐店 POS 機 UI Design</h2>
+            <p class="work_intro fs-6">訂單送單一目瞭然，自動報表分析好輕鬆</p>
+          </div>
+          <ul class="tag_menu">
+            <li class="tag_name fs-6">UI 設計</li>
+            <li class="tag_name fs-6">前端開發</li>
+            <li class="tag_name fs-6">Wix</li>
+          </ul>
+      </div>    
+      <div class="work_menu">    
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image5.png?raw=true"
+            alt="電影院訂票系統"
+            class="work_image"
+          />
+          <div class="work_content">
+            <h2 class="work_name">電影院訂票系統</h2>
+            <p class="work_intro fs-6">三步驟完成訂票，電腦手機都支援</p>
+          </div>
+          <ul class="tag_menu">
+            <li class="tag_name fs-6">前端開發</li>
+            <li class="tag_name fs-6">後端支援</li>
+            <li class="tag_name fs-6">Vue</li>
+          </ul>
+      </div>     
+      <div class="work_menu">    
+          <img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/work-image6.png?raw=true"
+            alt="巧克巧克形象官網設計"
+            class="work_image"/>
+          <div class="work_content">
+            <h2 class="work_name">巧克巧克形象官網設計</h2>
+            <p class="work_intro fs-6">三步驟完成訂票，電腦手機都支援</p>
+          </div>
+          <ul class="tag_menu">
+            <li class="tag_name fs-6">UI設計</li>
+            <li class="tag_name fs-6">設計系統</li>
+            <li class="tag_name fs-6">網路電商</li>
+          </ul>
+        </li>
+      </div>
+    </div>
 
     <!-- footer區塊 -->
     <div class="footer">
